<resources>
    <string name="app_name">ClinicaMobile</string>
    <string name="logo_image">logo image</string>
    <string name="search_logo">search logo</string>
    <string name="patient_name">patient name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="novo">Novo</string>
    <string name="procurar">Procurar</string>
    <string name="todos">Todos</string>
    <string name="complete_name">complete name</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="endereco">Endereço</string>
    <string name="profissao">Profissão</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="birthdate">birthDate</string>
    <string name="observation">observation</string>
    <string name="observacao">Observação</string>
    <string name="date">DD/MM/AAAA</string>
    <string-array name="sex">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string-array name="civilState">
        <item>Solteiro</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>União Estável</item>
    </string-array>
</resources>