<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/patient_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:text="textPatient" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="38dp"
        android:layout_height="34dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="224dp"
        android:background="#FFFEFE"
        android:contentDescription="@string/search_logo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchBox"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="304dp"
        android:layout_height="0dp"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/bemestar_logo" />

    <fragment
        android:id="@+id/fragment"
        android:name="tk.williamsouza.clinicamobile.HeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="340dp" />

</androidx.constraintlayout.widget.ConstraintLayout>